tests/toy/neg/001129_mutation.toylang
program a = { if program a = { } . a then sleep; } .
